# whiplash-music-player

./: README.md  auto-update-implementation.md  package-lock.json  package.json  ps-kill-process-1420.ps1
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  database.rs  lib.rs  metadata.rs  scanner.rs
src/lib/: audioProcessor.ts  types.ts
src/lib/components/: AudioVisualizer.svelte  ConfigDialog.svelte  Equalizer.svelte
src/routes/: +page.svelte
