[package]
name = "whiplash"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whiplash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio decoding and playback
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav", "isomp4", "aac"] }
rodio = { version = "0.19", features = ["symphonia"] }
rustfft = "6.2"

# Metadata extraction
audiotags = "0.5"
lofty = "0.18"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
walkdir = "2"
dirs = "5"
ignore = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Time handling
chrono = "0.4"

# Ring buffer for audio samples
ringbuf = "0.4"

# Spotify authentication
rspotify = { version = "0.13", features = ["cli", "client-reqwest", "reqwest-default-tls"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Regular expressions
regex = "1.10"
